--- a/FurnitureApp/MainWindow.xaml
+++ b/FurnitureApp/MainWindow.xaml
@@ -35,6 +35,7 @@
         </Button>
         <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="130,120,0,0" VerticalAlignment="Top" Width="217" Height="30" Background="White" BorderBrush="Black"/>
         <Button x:Name="button1" Content="↺" HorizontalAlignment="Left" Margin="170,240,0,0" Width="52" Height="50" FontSize="48" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FlowDirection="RightToLeft" Padding="1,-12,1,1" Click="Button_Update_Cumcha_Click" BorderBrush="Black"/>
+        <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="45,185,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
 
     </Grid>
 </Window>
