--- a/FurnitureApp/Views/MaterialsWindow.xaml
+++ b/FurnitureApp/Views/MaterialsWindow.xaml
@@ -5,21 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FurnitureApp.Views"
         mc:Ignorable="d"
-        Title="Материалы" Height="450" Width="800">
+        Title="Материалы" Height="682" Width="1089">
     <Grid>
-        <DataGrid Name="MaterialsDataGrid" HorizontalAlignment="Left" Height="344" Margin="10,65,0,0" VerticalAlignment="Top" Width="624"/>
-        <Button Name="AddButton" Content="Добавить" HorizontalAlignment="Left" Margin="639,10,0,0" VerticalAlignment="Top" Width="131" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Add_Click"/>
-        <Button Name="EditButton" Content="Изменить" HorizontalAlignment="Left" Margin="639,65,0,0" VerticalAlignment="Top" Width="131" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Edit_Click"/>
-        <Button Name="DeleteButton" Content="Удалить" HorizontalAlignment="Left" Margin="639,120,0,0" VerticalAlignment="Top" Width="131" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Delete_Click"/>
-        <Button Content="Все" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Height="50" FontSize="20" FontFamily="Arial" Click="Button_All_Click"/>
-        <Button Content="Качественные" HorizontalAlignment="Left" Margin="146,10,0,0" VerticalAlignment="Top" Width="164" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Qual_Click"/>
-        <Button Content="С дифектами" HorizontalAlignment="Left" Margin="315,10,0,0" VerticalAlignment="Top" Width="166" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Def_Click" RenderTransformOrigin="0.245,0.4"/>
-        <Button Content="Бракованные" HorizontalAlignment="Left" Margin="486,10,0,0" VerticalAlignment="Top" Width="148" Height="50" FontSize="20" FontFamily="Arial" Click="Button_Brak_Click" RenderTransformOrigin="0.297,0.5"/>
-        <Label Content="Всего материалов:" HorizontalAlignment="Left" Margin="656,196,0,0" VerticalAlignment="Top"/>
-        <Label Content="Выведено:" HorizontalAlignment="Left" Margin="673,262,0,0" VerticalAlignment="Top"/>
-        <Label Content="Общая стоимость:" HorizontalAlignment="Left" Margin="656,318,0,0" VerticalAlignment="Top"/>
-        <Label Name ="AllCountLabel" Content="" HorizontalAlignment="Left" Margin="705,227,0,0" VerticalAlignment="Top"/>
-        <Label Name="DisplayedLabel" Content="" HorizontalAlignment="Left" Margin="705,293,0,0" VerticalAlignment="Top"/>
-        <Label Name="TotalСostLabel" Content="" HorizontalAlignment="Left" Margin="705,349,0,0" VerticalAlignment="Top"/>
+        <DataGrid Name="MaterialsDataGrid" HorizontalAlignment="Left" Height="591" Margin="10,50,0,0" VerticalAlignment="Top" Width="1061"/>
+        <Button Name="AddButton" Content="Добавить" HorizontalAlignment="Left" Margin="447,10,0,0" VerticalAlignment="Top" Width="94" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Add_Click" RenderTransformOrigin="-0.183,0.5"/>
+        <Button Name="EditButton" Content="Изменить" HorizontalAlignment="Left" Margin="546,10,0,0" VerticalAlignment="Top" Width="99" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Edit_Click"/>
+        <Button Name="DeleteButton" Content="Удалить" HorizontalAlignment="Left" Margin="651,10,0,0" VerticalAlignment="Top" Width="93" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Delete_Click"/>
+        <Button Content="Все" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="40" Height="35" FontSize="16" FontFamily="Arial" Click="Button_All_Click"/>
+        <Button Content="Качественные" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="128" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Qual_Click" RenderTransformOrigin="0.231,0.5"/>
+        <Button Content="С дифектами" HorizontalAlignment="Left" Margin="189,10,0,0" VerticalAlignment="Top" Width="124" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Def_Click" RenderTransformOrigin="0.245,0.4"/>
+        <Button Content="Бракованные" HorizontalAlignment="Left" Margin="317,10,0,0" VerticalAlignment="Top" Width="124" Height="35" FontSize="16" FontFamily="Arial" Click="Button_Brak_Click" RenderTransformOrigin="0.297,0.5"/>
+        <Label Content="Всего материалов:" HorizontalAlignment="Left" Margin="756,13,0,0" VerticalAlignment="Top"/>
+        <Label Content="Выведено:" HorizontalAlignment="Left" Margin="928,14,0,0" VerticalAlignment="Top"/>
+        <Label Name ="AllCountLabel" Content="" HorizontalAlignment="Left" Margin="873,13,0,0" VerticalAlignment="Top" Width="50"/>
+        <Label Name="DisplayedLabel" Content="" HorizontalAlignment="Left" Margin="1000,14,0,0" VerticalAlignment="Top" Width="50"/>
     </Grid>
 </Window>
